--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,8 +45,12 @@
 </head>
 <body>
   <h1>My Roblox UI Library</h1>
-  <p>A lightweight Roblox UI system with Tabs, Buttons, Sliders — inspired by OrionLib.</p>
   <p><strong>Library Link:</strong> <a href="https://pastebin.com/raw/UfP9DBzE" target="_blank">https://pastebin.com/raw/UfP9DBzE</a></p>
+
+  <div class="section">
+    <h2>Description</h2>
+    <p>This is a Roblox UI Library made to help scripters create beautiful user interfaces easily, just like OrionLib. It supports tabs, buttons, sliders (mobile friendly), and draggable/minimizable windows. Perfect for making your own custom Roblox scripts or tools!</p>
+  </div>
 
   <div class="section">
     <h2>How to Use</h2>
